<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Insert Dummy Data</string>
    <string name="delete_all">Delete All Data</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="insert_failed">Insert Failed</string>
    <string name="product_saved">Product Saved</string>
    <string name="product_updated">Product Updated</string>
    <string name="product_update_failed">Product Updated Failed</string>
    <string name="permission_granted">camera permission granted</string>
    <string name="permission_denied">camera permission denied</string>
    <string name="discard_changes">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_product_msg">Delete This Product ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_delete_succ">Product Deleted Successfully</string>
    <string name="product_delete_failed">Product Deleted Failed</string>
    <string name="add_some_products_to_your_list">Add Some Products To Your List</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">quantity</string>
    <string name="supplier">Supplier</string>
    <string name="suppler_hint">suppler</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="email">email</string>
    <string name="take_photo">Take Photo</string>


</resources>
